# harness-loop-team

./: .gitignore  CLAUDE.md  README.md  install.sh  package-lock.json  package.json
00-harness-core/: 00-application-owner-agent.md  knowledge-index.yaml
01-rules/: 05-diagram-verification.md
01-rules/02-development-workflow/: 00-overview.md  01-testing-standards.md  02-error-precipitation.md  03-triage-matrix.md  04-stress-test-standards.md
01-rules/04-document-standards/: 00-overview.md  01-docs-workflow.md  02-prd-standards.md  03-requirements-methods.md  04-prototype-workflow.md  06-system-design-standards.md
02-skills-source/harness-brainstorming/: SKILL.md
02-skills-source/harness-code-review/: SKILL.md
09-templates/: PRD标准模板_v2.0.md  测试报告文档模板.md  测试用例文档模板.md  系统接口设计文档模版.md  系统物理模型设计文档-数据格式.json  系统物理模型设计文档模版.docx  系统物理模型设计文档模版.md  系统设计文档模板.md  项目迭代方案设计文档模板.md
docs/: Harness-Engineering培训指导文档.docx  Harness-Engineering培训指导文档.md  pipeline-state-schema.md
scripts/: generate-design-manifest.py
scripts/acm/: pyproject.toml  setup.py
scripts/acm/acm/: __init__.py  __main__.py
scripts/acm/acm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/acm/acm/collector/: __init__.py  blame.py  commit.py  session_diff.py
scripts/acm/acm/metrics/: __init__.py
scripts/acm/acm/reporter/: __init__.py
scripts/acm/acm/storage/: __init__.py
scripts/acm/git-template/: post-commit
scripts/acm/git-template/hooks/: post-commit  write_metadata.py
scripts/acm/hooks/: blame_ai.py  blame_human.py  detect_ai.py  post-commit
(+116 files in other folders)
